--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,9 @@
-/* You can add global styles to this file, and also import other style files */
+:root {
+  --c1: #1f2605;
+  --c2: #1F6521;
+  --c3: #53900F;
+  --c4: #A4A71e;
+  --C5: #D6CE15;
+
+  --font-size: 16px;
+}
