--- a/src/app/log-in-sign-up/log-in-sign-up.component.html
+++ b/src/app/log-in-sign-up/log-in-sign-up.component.html
@@ -1,1 +1,70 @@
-<p>log-in-sign-up works!</p>
+<div class="container-fluid h-100">
+  <div class="row h-100">
+    <!-- Top Left Rectangle -->
+    <div class="col-6 rect-top-left"></div>
+    <div class="col-6"></div> <!-- Empty space -->
+
+    <!-- Bottom Right Rectangle -->
+    <div class="col-6"></div> <!-- Empty space -->
+    <div class="col-6 rect-bottom-right"></div>
+  </div>
+
+   <!-- Center Rectangle -->
+   <div class="d-flex justify-content-center align-items-center position-absolute top-50 start-50 translate-middle">
+    <div class="rect-center">
+      <div class=".container-fluid  p-4">
+        <div class="row">
+          <div class=" col-2 heading">
+            <h1 class="text-center text-md-start">STCP</h1>
+          </div>
+          <!-- <div class="col-10 text-">
+            <p>(Student Teacher Collabaration Platform)</p>
+          </div> -->
+        </div>
+        <div class="lineBreak">
+        </div>
+        <div class="row text-center mt-3">
+          <h3>Create a STPC account</h3>
+          <h6>Already have a STPC account? <a href="#">login</a> </h6>
+        </div>
+      </div>
+      <div class="container-for-signUp mt-3">
+        <div class="account p-5 pt-0 pb-2">
+          <div class="forStudent">
+            <div class="card card-custom-style" [style]="{'background-color':selectedRole=='student'?'var(--selected-comp)':''}" [@cardHover]="isHoveredForStudent ? 'hovered' : 'default'" (mouseenter)="isHoveredForStudent = true" (mouseleave)="isHoveredForStudent = false" (click)="selectRole('student')">
+              <div class="card-header text-center">
+                <h5 class="card-title">For Student</h5>
+              </div>
+              <img src="assets/images/logInSignUp/student-80.png" class="card-img-top" alt="..." height="185px"> 
+              
+            </div>
+          </div>
+        </div>
+        <div class="seperator"></div>
+        <div class="account p-5 pt-0 pb-2">
+          <div class="forTeacher">
+            <div class="card card-custom-style" [style]="{'background-color':selectedRole=='teacher'?'var(--selected-comp)':''}" [@cardHover]="isHoveredForTeacher ? 'hovered' : 'default'" (mouseenter)="isHoveredForTeacher = true" (mouseleave)="isHoveredForTeacher = false" (click)="selectRole('teacher')">
+              <div class="card-header text-center">
+                <h5 class="card-title">For Teacher</h5>
+              </div>
+              <img src="assets/images/logInSignUp/teacher-100.png" class="card-img-top" alt="..." height="185px"> 
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="container-fluid  p-2">
+        <div class="row text-center">
+          <h6>please select your Role</h6>
+          https://youtu.be/EO-U01u9vFQ?si=WSs5oG4Cqje0XNrz
+        </div>
+      </div>
+    
+      <div [style]="{'display':selectedRole==''?'none':'block'}" class="pl-4 pt-1 pr-4 container text-center">
+        <div class="google-btn"></div> 
+      </div>
+
+    </div>
+  </div>
+
+</div>
+
