partially implemented teachers profile

--- a/src/app/shared/common/header/header.component.html
+++ b/src/app/shared/common/header/header.component.html
@@ -1,1 +1,11 @@
-<p>header works!</p>
+<div class="headder p-2">
+  <div class="item item-1">
+    Logo
+  </div>
+  <div class="item item-2">
+    <button class="btn btn-sm" style="background-color: var(--C5); float: right;">
+      logout
+    </button>
+    <span style="float: right; margin-right: 10px;">{{user.name}}</span>
+  </div>
+</div>
